--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,7 @@
 Django>=4.2,<5
+djangorestframework>=3.14,<4
 psycopg2-binary>=2.9
-celery>=5.3,<6
+celery[redis]>=5.3,<6
 redis>=5.0,<6
-celery[redis]
+django-cors-headers>=3.13,<4
+requests>=2.31,<3
