--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,39 @@
-Django>=4.2,<5
-djangorestframework>=3.14,<4
-psycopg2-binary>=2.9
-celery[redis]>=5.3,<6
-redis>=5.0,<6
-django-cors-headers>=3.13,<4
-requests>=2.31,<3
+amqp==5.3.1
+asgiref==3.9.1
+billiard==4.2.1
+celery==5.5.3
+certifi==2025.7.14
+charset-normalizer==3.4.2
+click==8.2.1
+click-didyoumean==0.3.1
+click-plugins==1.1.1.2
+click-repl==0.3.0
+colorama==0.4.6
+cron-descriptor==1.4.5
+Django==4.2.23
+django-celery-beat==2.8.1
+django-cors-headers==4.7.0
+django-timezone-field==7.1
+djangorestframework==3.16.0
+flower==2.0.1
+humanize==4.12.3
+idna==3.10
+kombu==5.5.4
+packaging==25.0
+prometheus_client==0.22.1
+prompt_toolkit==3.0.51
+psycopg2-binary==2.9.10
+PyJWT==2.9.0
+python-crontab==3.3.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.1
+pytz==2025.2
+redis==5.2.1
+requests==2.32.4
+six==1.17.0
+sqlparse==0.5.3
+tornado==6.5.1
+tzdata==2025.2
+urllib3==2.5.0
+vine==5.1.0
+wcwidth==0.2.13
