--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,10 @@
+networks:
+  cloudsec_net:
+    name: cloudsec_net
+    driver: bridge
+
 services:
+  #=====Database PostgreSQL=====#
   postgres:
     image: postgres:16-alpine
     container_name: postgres
@@ -11,7 +17,15 @@ services:
     restart: unless-stopped
     ports:
       - "5432:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U cloudsec"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    networks:
+      - cloudsec_net
 
+  #=====Redis (Broker Celery)=====#
   redis:
     image: redis:7.2-alpine
     container_name: redis
@@ -19,23 +33,44 @@ services:
     ports:
       - "6379:6379"
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 3s
+      retries: 5
+    networks:
+      - cloudsec_net
 
+  #=====Backend Django=====#
   backend:
     build:
       context: ./backend
     container_name: backend
-    command: sh -c "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
+    command: sh -c "python manage.py migrate && python manage.py collectstatic --noinput && python manage.py runserver 0.0.0.0:8000"
     volumes:
       - ./backend:/app
+      - media_data:/app/media
     env_file:
-      - .env
+      - .env.local
+      - .env.docker
     depends_on:
-      - postgres
-      - redis
+      postgres:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
     ports:
       - "8000:8000"
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/healthz"]
+      interval: 15s
+      timeout: 10s
+      retries: 10
+      start_period: 30s
+    networks:
+      - cloudsec_net
 
+  #=====Celery Worker=====#
   celery:
     build:
       context: ./backend
@@ -43,13 +78,42 @@ services:
     command: celery -A core worker -l info
     volumes:
       - ./backend:/app
+      - media_data:/app/media
     env_file:
-      - .env
+      - .env.local
+      - .env.docker
     depends_on:
       - backend
       - redis
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "celery", "-A", "core", "status"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+    networks:
+      - cloudsec_net
 
+  #=====Celery Beat=====#
+  celery-beat:
+    build:
+      context: ./backend
+    container_name: celery-beat
+    command: celery -A core beat -l info --scheduler django_celery_beat.schedulers:DatabaseScheduler
+    volumes:
+      - ./backend:/app
+      - media_data:/app/media
+    env_file:
+      - .env.local
+      - .env.docker
+    depends_on:
+      - backend
+      - redis
+    restart: unless-stopped
+    networks:
+      - cloudsec_net
+
+  #=====Frontend React=====#
   frontend:
     build:
       context: ./frontend
@@ -62,8 +126,29 @@ services:
     environment:
       - CHOKIDAR_USEPOLLING=true
     ports:
-      - "3000:3000"
+      - "3002:3000"
     restart: unless-stopped
+    networks:
+      - cloudsec_net
 
+  #=====Flower (Celery Monitoring)=====#
+  flower:
+    image: mher/flower:latest
+    container_name: flower
+    command: celery --broker=redis://redis:6379/0 flower --port=5555
+    environment:
+      - CELERY_BROKER_URL=redis://redis:6379/0
+    ports:
+      - "5555:5555"
+    depends_on:
+      - redis
+      - celery
+      - celery-beat
+    restart: unless-stopped
+    networks:
+      - cloudsec_net
+
+#=====Definizione dei volumi persistenti CP=====#
 volumes:
   postgres_data:
+  media_data:
