--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -148,6 +148,18 @@ services:
     networks:
       - cloudsec_net
 
+  #=====DBeaver Web (CloudBeaver)=====#
+  dbeaver:
+    image: dbeaver/cloudbeaver:latest
+    container_name: dbeaver
+    ports:
+      - "8978:8978"
+    depends_on:
+      - postgres
+    networks:
+      - cloudsec_net
+    restart: unless-stopped
+
 #=====Definizione dei volumi persistenti CP=====#
 volumes:
   postgres_data:
