--- a/backend/Jenkinsfile
+++ b/backend/Jenkinsfile
@@ -26,7 +26,7 @@ pipeline {
         }
         stage('Lint code') {
             steps {
-                sh 'flake8 backend --count --max-complexity=10 --max-line-length=127 --statistics'
+                sh 'flake8 backend'
             }
         }
         stage('PEP8 Check') {
@@ -56,10 +56,7 @@ pipeline {
         }
         stage('Pre-commit checks') {
             steps {
-                sh '''
-                    pre-commit install
-                    pre-commit run --all-files
-                '''
+                sh 'pre-commit run --all-files'
             }
         }
         stage('Run migrations') {
@@ -72,7 +69,12 @@ pipeline {
                 sh 'python manage.py collectstatic --noinput'
             }
         }
-        // stage('Run tests') {...} // aggiungi quando hai test!
+        stage('Run tests') {
+            steps {
+                echo 'Aggiungi qui i tuoi test!'
+                // sh 'pytest backend'
+            }
+        }
     }
     post {
         always {
