--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -162,14 +162,15 @@ services:
 
   #=====Jenkins CI=====#
   jenkins:
-    image: jenkins/jenkins:lts
+    build:
+      context: .
+      dockerfile: Dockerfile.jenkins
     container_name: jenkins
     ports:
       - "8080:8080"
     volumes:
       - jenkins_home:/var/jenkins_home
-      - /var/run/docker.sock:/var/run/docker.sock
-      # Opzionale: buildare immagini dal container Jenkins!
+      - //var/run/docker.sock:/var/run/docker.sock
     environment:
       JENKINS_OPTS: --prefix=/jenkins
     networks:
