--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,4 @@
+version: '3.8'
 networks:
   cloudsec_net:
     name: cloudsec_net
@@ -177,7 +178,19 @@ services:
       - cloudsec_net
     restart: unless-stopped
 
-#=====Definizione dei volumi persistenti CP=====#
+  #=====Ngrok tunnel per Jenkins=====#
+  ngrok:
+    image: ngrok/ngrok:latest
+    container_name: ngrok
+    command: http jenkins:8080
+    environment:
+      NGROK_AUTHTOKEN: "31xOW07xlymJyDLXYIjj1KVzYxZ_5jjRFFneVSwgmpqT7S73h"
+    depends_on:
+      - jenkins
+    networks:
+      - cloudsec_net
+
+#=====Definizione dei volumi persistenti=====#
 volumes:
   postgres_data:
   media_data:
