--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -190,8 +190,22 @@ services:
     networks:
       - cloudsec_net
 
+  #=====Portainer (Gestione Docker)=====#
+  portainer:
+    image: portainer/portainer-ce:latest
+    container_name: portainer
+    restart: unless-stopped
+    ports:
+      - "9000:9000"
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - portainer_data:/data
+    networks:
+      - cloudsec_net
+
 #=====Definizione dei volumi persistenti=====#
 volumes:
   postgres_data:
   media_data:
   jenkins_home:
+  portainer_data:
