--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,19 +3,45 @@ repos:
     rev: 24.4.0
     hooks:
       - id: black
+        language_version: python3
+        additional_dependencies: []
+        files: '\.py$'
   - repo: https://github.com/PyCQA/isort
     rev: 5.12.0
     hooks:
       - id: isort
+        language_version: python3
+        files: '\.py$'
   - repo: https://github.com/pycqa/flake8
     rev: 7.0.0
     hooks:
       - id: flake8
+        language_version: python3
+        additional_dependencies: []
+        files: '\.py$'
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v6.0.0
+    rev: v4.5.0
     hooks:
       - id: trailing-whitespace
       - id: end-of-file-fixer
       - id: check-yaml
       - id: check-added-large-files
       - id: debug-statements
+  - repo: https://github.com/PyCQA/bandit
+    rev: 1.7.8
+    hooks:
+      - id: bandit
+        args: ["-r", "backend"]
+        files: '\.py$'
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v1.10.0
+    hooks:
+      - id: mypy
+        additional_dependencies: []
+        files: '\.py$'
+
+# ESCLUSIONI GLOBALI (esempio: migrazioni, virtualenv, ecc)
+exclude: |
+  ^(migrations|venv|\.venv|env|\.env|node_modules|static|dist|build)/
+
+# OPZIONALE: puoi aggiungere altri hook come safety, commitizen, ecc. secondo policy del team.
